--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>josiahDover()</span>
+          <span>josiahDover( )</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
         <p>{front end web development}</p>
-        <a href="#contact" class="btn btn--pink">Get in touch</a>
+        <a href="#contact" class="btn btn--pink">reach out</a>
       </div>
     </div>
   </header>
@@ -68,7 +68,12 @@
 
     <section class="client" id="clients">
       <div class="row">
-        <h2>Clients</h2>
+        <h2>Skills</h2>
+              <ul class="work__list">
+                <li>FCC Responsive Web Design Certification</li>
+                <li>FCC Javascript Certification</li>
+                <li>FCC Front End Libraries Certification</li>
+              </ul>
         <div class="client__logos">
           <!-- Add logos of the clients or companies you'have worked with. -->
           <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
@@ -100,18 +105,15 @@
               </p>
               <ul class="work__list">
                 <li>HTML</li>
-                <li>SCSS</li>
+                <li>CSS</li>
                 <li>JavaScript</li>
                 <li>React</li>
                 <li>Netlify</li>
               </ul>
 
               <div class="work__links">
-                <a href="https://nisar.surge.sh" target="_blank" class="link__text">
+                <a href="https://resumegenx.netlify.app/#builder" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
-                </a>
-                <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
-                  <img src="./images/github.svg" class="work__code" alt="GitHub">
                 </a>
               </div>
             </div>
@@ -122,24 +124,22 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Calculator</h3>
+              <h3>Crypto Trader</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                This currency exhcange application focuses solely on data driven models. 
+                Sometimes a project has functionality at the forefront with no required emphasis on aesthetics. 
+                The approach shown delivers information clearly and allows for objective interactions wihtout unnecessary design drawing away from the informatics.
               </p>
               <ul class="work__list">
+                <li>html</li>
+                <li>Javascript</li>
                 <li>React</li>
-                <li>Next.js</li>
                 <li>Node</li>
-                <li>MongoDB</li>
               </ul>
 
               <div class="work__links">
-                <a href="#" class="link__text">
+                <a href="https://app.nash.io/trade/exchange/advanced?from=btc&to=usdc" class="link__text">
                   Visit Site <span>&rarr;</span>
-                </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
                 </a>
               </div>
             </div>
@@ -150,24 +150,23 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Notificator</h3>
+              <h3>Spotify App</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                Other times, the look and feel of the project is everything. 
+                This shows my styling capabilities by recreating the design of Spotify's web application. 
+                HTML/CSS can be tricky, but I promise a clean and attention-drawing design without sacrificing functionality.
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Bootstrap</li>
+                <li>JavaScript</li>
+                <li>Netlify</li>
               </ul>
 
               <div class="work__links">
-                <a href="#" class="link__text">
+                <a href="https://react-tailwind-spotify-demo.netlify.app/" class="link__text">
                   Visit Site <span>&rarr;</span>
-                </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
                 </a>
               </div>
             </div>
@@ -188,13 +187,19 @@
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos id
-              nostrum illo harum blanditiis, tenetur eum suscipit cupiditate
-              in vel, ex quam quidem quos mollitia labore aut sunt eius
-              ratione molestiae fuga veniam facere similique voluptate.
+              My name is Josiah Dover, I'm from Chattanooga, TN. I received a bachelor's in Chemical Engineering from Tennessee Tech in 2016.
+              I had multiple years of laboratory research experience, which led me to work as an Organic Research Chemist after graduating.
+              <br/>After three years working in the pharmaceutical industry, I traveled with my partner as she worked travel nurse contracts over the pandemic.
+              I gradually immersed myself in web languages over that time, which culminated in completing an online coding bootcamp and 
+              receiving the certifications listed in my skills. 
+              <br/> I'm an enthusiastic learner who is always intrigued by details, intricacies, and concepts. These characteristics
+              have allowed me to excel as a chemist, and I believe they are what propel me towards being a critically thinking web developer.
+              I also enjoy writing and playing music and delving into the creative processes involved with doing so. This quality is also very 
+              important in design, and my enjoyment of creativity allows me to focus on UX/UI in unique way.
+              Thanks for visiting my page, and I look forward to brainstorming on our next project!
             </p>
             <!-- Provide a link to your resume -->
-            <a href="#" class="btn">My Resume</a>
+            <a href="#" class="btn">My Resume?</a>
           </div>
 
           <div class="about__photo-container">
@@ -206,26 +211,6 @@
     </section>
   </main>
 
-  <!-- ***** Contact ***** -->
-
-  <section class="contact" id="contact">
-    <div class="row">
-      <h2>Get in Touch</h2>
-      <div class="contact__info">
-        <p>
-          Are you looking for a fast-performing and user-friendly website to
-          represent your product or business? or looking for any kind of
-          consultation? or want to ask questions? or have some advice for me
-          or just want to say "Hi 👋" in any case feel free to Let me know. I
-          will do my best to respond back. 😊 The quickest way to reach out to
-          me is via an email.
-        </p>
-        <!-- Replace the email with yours -->
-        <a href="mailto:you@example.com" class="btn">you@example.com</a>
-      </div>
-    </div>
-  </section>
-
   <!-- ***** Footer ***** -->
 
   <footer role="contentinfo" class="footer">
@@ -233,22 +218,22 @@
       <!-- Update the links to point to your accounts -->
       <ul class="footer__social-links">
         <li class="footer__social-link-item">
-          <a href="https://twitter.com/nisarhassan12/" title="Link to Twitter Profile">
+          <a href="#" title="Link to Twitter Profile">
             <img src="./images/twitter.svg" class="footer__social-image" alt="Twitter">
           </a>
         </li>
         <li class="footer__social-link-item">
-          <a href="https://github.com/nisarhassan12/" title="Link to Github Profile">
+          <a href="#" title="Link to Github Profile">
             <img src="./images/github.svg" class="footer__social-image" alt="Github">
           </a>
         </li>
         <li class="footer__social-link-item">
-          <a href="https://codepen.io/nisar_hassan" title="Link to Codepen Profile">
+          <a href="#" title="Link to Codepen Profile">
             <img src="./images/codepen.svg" class="footer__social-image" alt="Codepen">
           </a>
         </li>
         <li class="footer__social-link-item">
-          <a href=https://www.linkedin.com/in/nisar-hassan-naqvi-413466199/">
+          <a href="#">
             <img src="./images/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
           </a>
         </li>
@@ -256,13 +241,9 @@
 
       <!-- If you give me some credit by keeping the below paragraph, will be huge for me 😊 Thanks. -->
       <p>
-        &copy; 2020 - Template designed & developed by <a href="https://nisar.dev" class="link">Nisar</a>.
+        &copy; 2022 - Designed & developed by <a href="#" class="link">Josiah Dover</a>.
       </p>
       <div class="footer__github-buttons">
-        <iframe
-          src="https://ghbtns.com/github-btn.html?user=nisarhassan12&repo=portfolio-template&type=watch&count=true"
-          frameborder="0" scrolling="0" width="170" height="20" title="Watch Portfolio Template on GitHub">
-        </iframe>
       </div>
     </div>
   </footer>
