--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Put your site title here -->
   <title>
-    josiahDover()
+    josiahDover( )
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
@@ -76,12 +76,12 @@
               </ul>
         <div class="client__logos">
           <!-- Add logos of the clients or companies you'have worked with. -->
-          <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
-          <img src="./images/goldengrid.png" class="client__logo" alt="Company 3" />
-          <img src="./images/bullseye.png" class="client__logo" alt="Company 1" />
-          <img src="./images/mighty-furnitures.png" class="client__logo" alt="Company 1" />
-          <img src="./images/fastlane.png" class="client__logo" alt="Company 3" />
-          <img src="./images/chippy.png" class="client__logo" alt="Company 1" />
+          <img src="/HTML5_logo_and_wordmark.svg" class="client__logo" alt="Company 2" />
+          <img src="./CSS3_logo_and_wordmark.svg" class="client__logo" alt="Company 3" />
+          <img src="/Bootstrap_logo.svg" class="client__logo" alt="Company 1" />
+          <img src="/javascript-39395.png" class="client__logo" alt="Company 1" />
+          <img src="/React-icon.svg" class="client__logo" alt="Company 3" />
+          <img src="logo.png" class="client__logo" alt="Company 1" />
         </div>
       </div>
     </section>
