--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
               </ul>
         <div class="client__logos">
           <!-- Add logos of the clients or companies you'have worked with. -->
-          <img src="/HTML5_logo_and_wordmark.svg" class="client__logo" alt="Company 2" />
+          <img src="HTML5_logo_and_wordmark.svg" class="client__logo" alt="Company 2" />
           <img src="./CSS3_logo_and_wordmark.svg" class="client__logo" alt="Company 3" />
-          <img src="/Bootstrap_logo.svg" class="client__logo" alt="Company 1" />
-          <img src="/javascript-39395.png" class="client__logo" alt="Company 1" />
-          <img src="/React-icon.svg" class="client__logo" alt="Company 3" />
+          <img src="Bootstrap_logo.svg" class="client__logo" alt="Company 1" />
+          <img src="javascript-39395.png" class="client__logo" alt="Company 1" />
+          <img src="React-icon.svg" class="client__logo" alt="Company 3" />
           <img src="logo.png" class="client__logo" alt="Company 1" />
         </div>
       </div>
@@ -118,7 +118,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-1.png" class="work__image" alt="Project 1" />
+              <img src="./resumegen.png" class="work__image" alt="Project 1" />
             </div>
           </div>
 
