--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
     <section class="work" id="work">
       <div class="row">
         <h2>Projects</h2>
-        <p>Each project here will display a unique side of my competencies and flexibility as a goal-oriented front end engineer.</p>
+        <p>Each project here displays a unique side of my competencies and flexibility as a goal-oriented front end engineer.</p>
+        <br/>
+        <br/>
         <div class="work__boxes">
 
           <!-- Each div with the work__box class is a project. -->
