--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <!-- Put a small paragraph about yourself -->
         <p>{front end web development}</p>
         <a href="#contact" class="btn btn--pink">reach out</a>
+        <img src="ProfilePictureMaker.png" class="profile-pic"/>
       </div>
     </div>
   </header>
@@ -146,7 +147,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-2.png" class="work__image" alt="Project 1" />
+              <img src="./crypto.png" class="work__image" alt="Project 1" />
             </div>
           </div>
 
@@ -173,7 +174,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-3.png" class="work__image" alt="Project 3" />
+              <img src="./spoturfy.png" class="work__image" alt="Project 3" />
             </div>
           </div>
         </div>
@@ -206,7 +207,7 @@
 
           <div class="about__photo-container">
             <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
+            <img class="about__photo" src="./mountain.jpg" alt="" />
           </div>
         </div>
       </div>
