--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>josiahDover( )</span>
+          <span id="typey">josiahDover( )</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
         <p>{front end web development}</p>
