--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
               <p>
                 This currency exhcange application focuses solely on data driven models. 
                 Sometimes a project has functionality at the forefront with no required emphasis on aesthetics. 
-                The approach shown delivers information clearly and allows for objective interactions wihtout unnecessary design drawing away from the informatics.
+                The approach shown delivers information clearly and allows for objective interactions without unnecessary design drawing away from the informatics.
               </p>
               <ul class="work__list">
-                <li>html</li>
+                <li>HTML</li>
                 <li>Javascript</li>
                 <li>React</li>
                 <li>Node</li>
@@ -156,7 +156,7 @@
               <h3>Spotify App</h3>
               <p>
                 Other times, the look and feel of the project is everything. 
-                This shows my styling capabilities by recreating the design of Spotify's web application. 
+                This project shows my styling capabilities by recreating the design of Spotify's web application. 
                 HTML/CSS can be tricky, but I promise a clean and attention-drawing design without sacrificing functionality.
               </p>
               <ul class="work__list">
