--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </h1>
         <!-- Put a small paragraph about yourself -->
         <p>{front end web development}</p>
-        <a href="#contact" class="btn btn--pink">reach out</a>
+        <a href="mailto:EvanJosiahDover@gmail.com" class="btn btn--pink">reach out</a>
       </div>
     </div>
     
@@ -203,7 +203,6 @@
               Thanks for visiting my page, and I look forward to brainstorming on our next project!
             </p>
             <!-- Provide a link to your resume -->
-            <a href="#" class="btn">My Resume?</a>
           </div>
 
           <div class="about__photo-container">
