--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <span id="typey" class="typing-text">josiahDover( )</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <span>{front end web development}</span>
+        {front end web development}
         <a href="mailto:EvanJosiahDover@gmail.com" class="btn btn--pink">reach out</a>
       </div>
     </div>
