--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <span id="typey" class="typing-text">josiahDover( )</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        {front end web development}
+        <h3>{front end web development}</h3>
         <a href="mailto:EvanJosiahDover@gmail.com" class="btn btn--pink">reach out</a>
       </div>
     </div>
