--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               </ul>
 
               <div class="work__links">
-                <a href="https://resumegenx.netlify.app/#builder" target="_blank" class="link__text">
+                <a href="https://resumegenx.netlify.app" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
               </div>
