--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <!-- Put a small paragraph about yourself -->
         <h4>{front end web development}</h4>
         <a href="mailto:EvanJosiahDover@gmail.com" class="btn btn--pink">reach out</a>
+        <span class="typing-text"></span>
       </div>
     </div>
     
